added date picker + bell instead of bookmark

--- a/mainFeed/index.html
+++ b/mainFeed/index.html
@@ -72,7 +72,7 @@
                     <span class="eventTitle">Event Title</span>
 
                     <!-- bookmark icon -->
-                    <img class="bookmarkIcon" src="/assets/bookmark-icon-empty.svg"/>
+                    <img class="alertIcon" src="bell-icon-inactive.svg"/>
                 </div>
                 
                 <!-- host label -->
