fixed popup scaling issues
+ click on poster = open poster in new page!

--- a/mainFeed/index.html
+++ b/mainFeed/index.html
@@ -75,7 +75,7 @@
                                 
                                 <!-- the poster -->
                                 <div id="posterContainer">
-                                    <img src="event-poster.png" id="poster">
+                                    <a href="event-poster.png" target="_blank"><img src="event-poster.png" id="poster"></a>
                                 </div>
                             
                             </div>
