added recaptcha to create account

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button id="loginButton">Access Edutix</button>
             
             <!-- don't have account button -->
-            <p id="createAccountLabel" class="infoLabel">Don't have an account? <a id="createAccountLink" href="#" class="infoLink">Click here to create one</a></p>
+            <p id="createAccountLabel" class="infoLabel">Don't have an account? <a id="createAccountLink" href="createAccount/" class="infoLink">Click here to create one</a></p>
             
             <!-- reset password label -->
             <p id="resetPasswordLabel" class="infoLabel">Forgot your password? <a id="resetPasswordLink" href="#" class="infoLink">Click here to reset it</a></p>
