login script ready

--- a/createAccount/index.html
+++ b/createAccount/index.html
@@ -2,7 +2,7 @@
 
     <head>
         <!-- A title for the page -->
-        <title>Edutix | Login</title>
+        <title>Edutix | Create an Account</title>
         
         <!-- icon -->
         <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
